--- a/css/style.css
+++ b/css/style.css
@@ -669,8 +669,22 @@ h1, h2, h3, h4, h5, h6, figure {
 #gtco-cantact .heading .subtle-text span {
   display: block;
 }
+#gtco-contact .form-group {
+  margin-bottom: 30px;
+}
+#gtco-contact .form-control {
+  height: 43px;
+  font-size: 18px;
+  box-shadow: none !important;
+  border: 1px solid #cccccc;
+  padding-left: 20px;
+  padding-right: 20px;
+  background: #fff;
+}
+
 .align {
   text-align: center;
+  display: block;
 }
 .heading {
   text-align: center;
@@ -705,17 +719,6 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fbbe30;
 }
 
-.read-more i {
-  position: relative;
-  top: 2px;
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
-}
-.read-more:hover i {
-  padding-left: 10px;
-}
-
 .gtco-social-icons {
   margin: 0;
   padding: 0;
@@ -742,58 +745,11 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 20px;
 }
 
-.gtco-open-platform-info {
+.gtco-open-platform {
   margin-bottom: 30px;
   float: left;
   width: 100%;
   position: relative;
-}
-.gtco-open-platform-info ul {
-  padding: 0;
-  margin: 0;
-  clear: both;
-}
-.gtco-open-platform-info ul li {
-  padding: 0 0 0 50px;
-  margin: 0 0 30px 0;
-  list-style: none;
-  position: relative;
-}
-.gtco-open-platform-info ul li:before {
-  color: #fbbe30;
-  position: absolute;
-  left: 0;
-  top: .05em;
-  font-family: 'icomoon';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.gtco-open-platform-info ul li.address:before {
-  font-size: 30px;
-  content: "\e9d1";
-}
-.gtco-open-platform-info ul li.phone:before {
-  font-size: 23px;
-  content: "\e9f4";
-}
-.gtco-open-platform-info ul li.email:before {
-  font-size: 23px;
-  content: "\e9da";
-}
-.gtco-open-platform-info ul li.url:before {
-  font-size: 23px;
-  content: "\e9af";
-}
-
-form label {
-  font-weight: normal !important;
 }
 
 #gtco-header .display-tc,
@@ -829,13 +785,15 @@ form label {
   line-height: 1.5;
   margin-bottom: 30px;
 }
-#gtco-contact,#gtco-join-us,#gtco-open-platform{
+#gtco-join-us,#gtco-open-platform{
   background: #fafafa;
   padding-top:50px;
 }
-
+#gtco-reputation{
+ padding-top: 50px;
+}
 #gtco-footer {
-  padding-top: 30px;
+  padding-top: 70px;
   background: #fafafa;
 }
 #gtco-footer .gtco-footer-links {
@@ -875,26 +833,17 @@ form label {
   margin: 0 0 10px 0;
   list-style: none;
 }
-#gtco-footer .gtco-widget .gtco-quick-open-platform li i {
-  width: 30px;
-  float: left;
-  font-size: 18px;
-  position: relative;
-  margin-top: 4px;
-  display: -moz-inline-stack;
-  display: inline-block;
-  zoom: 1;
-  *display: inline;
+#gtco-footer .info{
+  margin-bottom: 70px;
+}
+#gtco-footer .icon{
+  margin-bottom:30px;
 }
 @media screen and (max-width: 768px) {
-  #gtco-footer .copyright .pull-left,
-  #gtco-footer .copyright .pull-right {
+  #gtco-footer .copyright {
     float: none !important;
     text-align: center;
   }
-}
-#gtco-footer .copyright .block {
-  display: block;
 }
 
 #gtco-offcanvas {
